--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,35 @@
-- name: Inject Stylus 2024 SUSFS (Static)
+name: Build Kernel
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Kernel Source
+        uses: actions/checkout@v4
+        with:
+          repository: MotorolaMobilityLLC/kernel-msm
+          ref: android-14-release-u1tgn34.42-86
+          path: kernel
+
+      - name: Setup Build Environment
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y bc build-essential flex bison libssl-dev libelf-dev clang lld llvm
+
+      - name: Inject Stylus 2024 SUSFS (Static)
         run: |
           cd kernel
           mkdir -p include/linux fs
           
-          # 1. Download the GalaxyBuild Patch (The one link that worked)
+          # 1. Download the verified Patch
           curl -LSs "https://raw.githubusercontent.com/galaxybuild-project/tools/main/Patches/0001_susfs_157_for_ksunext.patch" -o susfs.patch
           
-          # 2. Manually Create the Header (No 404 risk)
+          # 2. Inject Header File (Static)
           cat << 'EOF' > include/linux/susfs.h
           #ifndef _LINUX_SUSFS_H
           #define _LINUX_SUSFS_H
@@ -18,7 +41,7 @@
           #endif
           EOF
 
-          # 3. Manually Create the Source (No 404 risk)
+          # 3. Inject Source File (Static)
           cat << 'EOF' > fs/susfs.c
           #include <linux/susfs.h>
           #include <linux/kernel.h>
@@ -27,10 +50,32 @@
           void susfs_init(void) { pr_info("SUSFS: Stylus 2024 Ghost Layer Active\n"); }
           EOF
 
-          # 4. Link & Apply Patch
-          # This tells the Motorola Makefile to compile our new susfs.c
+          # 4. Link & Patch
           grep -q "susfs.o" fs/Makefile || sed -i '/obj-y += sys.o/a obj-y += susfs.o' fs/Makefile
+          patch -p1 --batch --fuzz=3 < susfs.patch || echo "Skipping non-Motorola hunks."
+
+      - name: Compile Kernel
+        run: |
+          cd kernel
+          export ARCH=arm64
+          export LLVM=1
+          export CROSS_COMPILE=aarch64-linux-gnu-
+          mkdir -p out
           
-          # --batch: Automatically skip files that don't exist in Motorola source
-          # --fuzz=3: Handle Motorola-specific line offsets
-          patch -p1 --batch --fuzz=3 < susfs.patch || echo "Skipped non-Motorola hunks, proceeding..."
+          # Base GKI + Motorola Parrot Layers
+          make O=out ARCH=arm64 gki_defconfig
+          make O=out ARCH=out/arch/arm64/configs vendor/parrot_GKI.config
+          make O=out ARCH=out/arch/arm64/configs vendor/parrot_consolidate.config
+          
+          # Final Config Adjustments
+          scripts/config --file out/.config --enable CONFIG_SUSFS
+          scripts/config --file out/.config --enable CONFIG_SUSFS_SUS_MOUNT
+          scripts/config --file out/.config --enable CONFIG_SUSFS_HIDE_KSU
+          
+          make O=out ARCH=arm64 -j$(nproc)
+
+      - name: Upload Kernel Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Image-SUSFS
+          path: kernel/out/arch/arm64/boot/Image
