--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y bc build-essential flex bison libssl-dev libelf-dev
-          # Pulling official Google Prebuilts for Android 14 / Kernel 5.10
+          # Pulling official Google Prebuilts
           git clone --depth=1 https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86 prebuilts/clang
           git clone --depth=1 https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9 prebuilts/gcc64
           git clone --depth=1 https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9 prebuilts/gcc32
@@ -28,8 +28,6 @@ jobs:
         run: |
           cd kernel
           mkdir -p include/linux fs
-          
-          # 1. Create Static Header (Ghost Layer v1.5.2)
           cat << 'EOF' > include/linux/susfs.h
           #ifndef _LINUX_SUSFS_H
           #define _LINUX_SUSFS_H
@@ -40,8 +38,6 @@ jobs:
           bool is_susfs_enabled(void);
           #endif
           EOF
-          
-          # 2. Create Static Source
           cat << 'EOF' > fs/susfs.c
           #include <linux/susfs.h>
           #include <linux/kernel.h>
@@ -49,28 +45,21 @@ jobs:
           bool is_susfs_enabled(void) { return susfs_enabled; }
           void susfs_init(void) { pr_info("SUSFS: Stylus 2024 Ghost Layer Active\n"); }
           EOF
-          
-          # 3. Patch Motorola Makefile to compile the Ghost Layer
           grep -q "susfs.o" fs/Makefile || sed -i '/obj-y += sys.o/a obj-y += susfs.o' fs/Makefile
-          
-          # 4. Apply GalaxyBuild Universal Patch (Batch mode to skip non-existent files)
           curl -LSs "https://raw.githubusercontent.com/galaxybuild-project/tools/main/Patches/0001_susfs_157_for_ksunext.patch" -o susfs.patch
-          patch -p1 --batch --fuzz=3 < susfs.patch || echo "Applied essential hooks to Motorola source."
+          patch -p1 --batch --fuzz=3 < susfs.patch || echo "Applied essential hooks."
 
       - name: Compile Kernel
         run: |
-          cd kernel
-          # Setup Absolute Paths for Tools
-          export CLANG_DIR=$(pwd)/../prebuilts/clang/clang-r416183b1
-          export GCC64_DIR=$(pwd)/../prebuilts/gcc64
-          export GCC32_DIR=$(pwd)/../prebuilts/gcc32
-          export PATH=$CLANG_DIR/bin:$GCC64_DIR/bin:$GCC32_DIR/bin:$PATH
+          # 1. Dynamically find the Clang folder (Fixes the "Not Found" error)
+          CLANG_PATH=$(find $(pwd)/prebuilts/clang -name "clang" -type f | head -n 1 | xargs dirname)
+          GCC64_PATH=$(pwd)/prebuilts/gcc64/bin
+          GCC32_PATH=$(pwd)/prebuilts/gcc32/bin
           
-          # FIX: Explicitly point to the linker Motorola is looking for
-          export LD=$CLANG_DIR/bin/ld.lld
-          export LDFLAGS="--rtlib=compiler-rt --unwindlib=libgcc"
-
-          # Cross-Compile Variables for Stylus 2024
+          if [ -z "$CLANG_PATH" ]; then echo "ERROR: Clang binary not found!"; exit 1; fi
+          
+          export PATH=$CLANG_PATH:$GCC64_PATH:$GCC32_PATH:$PATH
+          export LD=$CLANG_PATH/ld.lld
           export ARCH=arm64
           export LLVM=1
           export LLVM_IAS=1
@@ -78,9 +67,23 @@ jobs:
           export CROSS_COMPILE=aarch64-linux-android-
           export CROSS_COMPILE_ARM32=arm-linux-androideabi-
           
+          cd kernel
           mkdir -p out
           
-          # Build Motorola Parrot Config
-          make O=out ARCH=arm64 CC=clang LD=$LD CLANG_TRIPLE=$CLANG_TRIPLE CROSS_COMPILE=$CROSS_COMPILE CROSS_COMPILE_ARM32=$CROSS_COMPILE_ARM32 gki_defconfig
-          make O=out ARCH=arm64 CC=clang LD=$LD CLANG_TRIPLE=$CLANG_TRIPLE CROSS_COMPILE=$CROSS_COMPILE CROSS_COMPILE_ARM32=$CROSS_COMPILE_ARM32 vendor/parrot_GKI.config
-          make O=out ARCH=arm64 CC=clang LD
+          # Build Configs
+          make O=out $FLAGS ARCH=arm64 CC=clang LD=$LD CLANG_TRIPLE=$CLANG_TRIPLE CROSS_COMPILE=$CROSS_COMPILE CROSS_COMPILE_ARM32=$CROSS_COMPILE_ARM32 gki_defconfig
+          make O=out $FLAGS ARCH=arm64 CC=clang LD=$LD CLANG_TRIPLE=$CLANG_TRIPLE CROSS_COMPILE=$CROSS_COMPILE CROSS_COMPILE_ARM32=$CROSS_COMPILE_ARM32 vendor/parrot_GKI.config
+          make O=out $FLAGS ARCH=arm64 CC=clang LD=$LD CLANG_TRIPLE=$CLANG_TRIPLE CROSS_COMPILE=$CROSS_COMPILE CROSS_COMPILE_ARM32=$CROSS_COMPILE_ARM32 vendor/parrot_consolidate.config
+          
+          ./scripts/config --file out/.config --enable CONFIG_SUSFS
+          ./scripts/config --file out/.config --enable CONFIG_SUSFS_SUS_MOUNT
+          ./scripts/config --file out/.config --enable CONFIG_SUSFS_HIDE_KSU
+          
+          # Build
+          make O=out ARCH=arm64 CC=clang LD=$LD CLANG_TRIPLE=$CLANG_TRIPLE CROSS_COMPILE=$CROSS_COMPILE CROSS_COMPILE_ARM32=$CROSS_COMPILE_ARM32 -j$(nproc)
+
+      - name: Upload Kernel Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Image-SUSFS-Stylus2024
+          path: kernel/out/arch/arm64/boot/Image
