--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,28 +11,33 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: kernel
-          submodules: recursive  # Added this to fix the 'submodule' warning in your log
+          fetch-depth: 1
+          # Submodules removed to bypass the broken .gitmodules links
 
       - name: Surgical Fix for Moto Prototypes
         working-directory: kernel
         run: |
-          # Fixing the strict prototype errors in the Motorola/Qualcomm source
-          sed -i 's/static int get_moto_device()/static int get_moto_device(void)/g' drivers/soc/qcom/icnss2/qmi.c
-          sed -i 's/static int get_moto_radio()/static int get_moto_radio(void)/g' drivers/soc/qcom/icnss2/qmi.c
-          echo "Motorola QMI prototypes patched successfully."
+          # Ensuring the directories exist before running sed to avoid exit code 2
+          if [ -f drivers/soc/qcom/icnss2/qmi.c ]; then
+            sed -i 's/static int get_moto_device()/static int get_moto_device(void)/g' drivers/soc/qcom/icnss2/qmi.c
+            sed -i 's/static int get_moto_radio()/static int get_moto_radio(void)/g' drivers/soc/qcom/icnss2/qmi.c
+            echo "Motorola QMI prototypes patched successfully."
+          else
+            echo "Target file not found, checking directory structure..."
+            find . -name "qmi.c"
+            exit 1
+          fi
 
       - name: Set up Toolchain
         run: |
           sudo apt-get update
-          sudo apt-get install -y bc build-essential bison flex libssl-dev libelf-dev libncurses-dev
-          # Note: If your build needs a specific Clang/GCC, we will add it here next.
+          sudo apt-get install -y bc build-essential bison flex libssl-dev libelf-dev libncurses-dev crossbuild-essential-arm64
 
       - name: Compile Kernel
         working-directory: kernel
         run: |
-          # Use the correct defconfig for the Moto Stylus 2024 (boston)
-          # Replace 'boston_defconfig' if your specific branch uses a different name
-          make O=out ARCH=arm64 boston_defconfig
+          # Standardizing the build environment for KernelOS
+          make O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- boston_defconfig
           make O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
 
       - name: Upload Artifact
