--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,23 +10,17 @@ jobs:
       - name: Checkout Kernel Source
         uses: actions/checkout@v4
         with:
-          path: kernel
+          # We are targeting branch 't' since that is where the source code lives
+          ref: t
           fetch-depth: 1
-          # Submodules removed to bypass the broken .gitmodules links
 
       - name: Surgical Fix for Moto Prototypes
-        working-directory: kernel
         run: |
-          # Ensuring the directories exist before running sed to avoid exit code 2
-          if [ -f drivers/soc/qcom/icnss2/qmi.c ]; then
-            sed -i 's/static int get_moto_device()/static int get_moto_device(void)/g' drivers/soc/qcom/icnss2/qmi.c
-            sed -i 's/static int get_moto_radio()/static int get_moto_radio(void)/g' drivers/soc/qcom/icnss2/qmi.c
-            echo "Motorola QMI prototypes patched successfully."
-          else
-            echo "Target file not found, checking directory structure..."
-            find . -name "qmi.c"
-            exit 1
-          fi
+          echo "Hunting for qmi.c in the repository..."
+          # This finds the file anywhere in the repo and applies the 'void' fix
+          find . -name "qmi.c" -exec sed -i 's/static int get_moto_device()/static int get_moto_device(void)/g' {} +
+          find . -name "qmi.c" -exec sed -i 's/static int get_moto_radio()/static int get_moto_radio(void)/g' {} +
+          echo "Fix applied to all instances of qmi.c found."
 
       - name: Set up Toolchain
         run: |
@@ -34,9 +28,9 @@ jobs:
           sudo apt-get install -y bc build-essential bison flex libssl-dev libelf-dev libncurses-dev crossbuild-essential-arm64
 
       - name: Compile Kernel
-        working-directory: kernel
         run: |
-          # Standardizing the build environment for KernelOS
+          # We go into 'source' because that is where the 'Makefile' is located on branch 't'
+          cd source
           make O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- boston_defconfig
           make O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
 
@@ -45,5 +39,5 @@ jobs:
         with:
           name: Kernel_Build_Output
           path: |
-            kernel/out/arch/arm64/boot/Image.gz
-            kernel/out/arch/arm64/boot/dtbo.img
+            source/out/arch/arm64/boot/Image.gz
+            source/out/arch/arm64/boot/dtbo.img
