--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,17 +10,15 @@ jobs:
       - name: Checkout Kernel Source
         uses: actions/checkout@v4
         with:
-          # We are targeting branch 't' since that is where the source code lives
           ref: t
           fetch-depth: 1
 
       - name: Surgical Fix for Moto Prototypes
         run: |
-          echo "Hunting for qmi.c in the repository..."
-          # This finds the file anywhere in the repo and applies the 'void' fix
+          echo "Hunting for qmi.c and applying fix..."
           find . -name "qmi.c" -exec sed -i 's/static int get_moto_device()/static int get_moto_device(void)/g' {} +
           find . -name "qmi.c" -exec sed -i 's/static int get_moto_radio()/static int get_moto_radio(void)/g' {} +
-          echo "Fix applied to all instances of qmi.c found."
+          echo "Fix applied successfully."
 
       - name: Set up Toolchain
         run: |
@@ -29,8 +27,7 @@ jobs:
 
       - name: Compile Kernel
         run: |
-          # We go into 'source' because that is where the 'Makefile' is located on branch 't'
-          cd source
+          # Running directly in the root since 'source' folder doesn't exist on this branch
           make O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- boston_defconfig
           make O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
 
@@ -39,5 +36,5 @@ jobs:
         with:
           name: Kernel_Build_Output
           path: |
-            source/out/arch/arm64/boot/Image.gz
-            source/out/arch/arm64/boot/dtbo.img
+            out/arch/arm64/boot/Image.gz
+            out/arch/arm64/boot/dtbo.img
