--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,19 @@ jobs:
           ref: t
           fetch-depth: 1
 
+      - name: List All Defconfigs (Diagnostic)
+        run: |
+          echo "Searching for all available defconfigs..."
+          find . -name "*_defconfig"
+          echo "-----------------------------------"
+          echo "Searching for any file named boston..."
+          find . -name "*boston*"
+
       - name: Surgical Fix for Moto Prototypes
         run: |
           echo "Hunting for qmi.c and applying fix..."
           find . -name "qmi.c" -exec sed -i 's/static int get_moto_device()/static int get_moto_device(void)/g' {} +
           find . -name "qmi.c" -exec sed -i 's/static int get_moto_radio()/static int get_moto_radio(void)/g' {} +
-          echo "Fix applied successfully."
 
       - name: Set up Toolchain
         run: |
@@ -27,28 +34,26 @@ jobs:
 
       - name: Locate and Compile Kernel
         run: |
-          # 1. Find the path to the defconfig file
-          CONFIG_PATH=$(find . -name "boston_defconfig" | head -n 1)
-          if [ -z "$CONFIG_PATH" ]; then
-            echo "ERROR: boston_defconfig not found!"
-            exit 1
-          fi
-          
-          # 2. The Kernel Root is 3 levels up from arch/arm64/configs/boston_defconfig
-          # We'll just find the nearest Makefile to that config file
-          KERNEL_ROOT=$(dirname "$CONFIG_PATH")
-          while [ ! -f "$KERNEL_ROOT/Makefile" ] && [ "$KERNEL_ROOT" != "." ]; do
-            KERNEL_ROOT=$(dirname "$KERNEL_ROOT")
-          done
-          
-          echo "Kernel source detected at: $KERNEL_ROOT"
+          # 1. Find the root (wherever the Makefile is)
+          KERNEL_ROOT=$(find . -maxdepth 3 -name "Makefile" -exec dirname {} + | head -n 1)
           cd "$KERNEL_ROOT"
           
-          # 3. Run the build
-          make O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- boston_defconfig
+          # 2. Try to find the BEST match for a boston config
+          REAL_CONFIG=$(find . -name "*boston*_defconfig" | head -n 1 | xargs basename)
+          
+          if [ -z "$REAL_CONFIG" ]; then
+            echo "No boston config found, falling back to generic hunt..."
+            REAL_CONFIG=$(find . -name "*_defconfig" | head -n 1 | xargs basename)
+          fi
+
+          echo "Using Config: $REAL_CONFIG"
+          echo "Kernel Root: $KERNEL_ROOT"
+          
+          # 3. Build
+          make O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- "$REAL_CONFIG"
           make O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
           
-          echo "FINAL_OUT=$KERNEL_ROOT/out" >> $GITHUB_ENV
+          echo "FINAL_OUT=$(pwd)/out" >> $GITHUB_ENV
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
