--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,30 +15,35 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y bc build-essential bison flex libssl-dev libelf-dev libncurses-dev crossbuild-essential-arm64 git
 
-      # THE BIRTH: Clones the actual Motorola source code
       - name: Clone Motorola Kernel Source
         run: |
-          echo "Cloning large kernel source... this will take some time."
-          git clone --depth 1 --branch t https://github.com/MotorolaMobilityLLC/kernel-msm.git source
-          echo "Clone complete."
+          echo "Finding the correct branch..."
+          # Fetch remote branches and look for 'T' or '13' related ones
+          BRANCH=$(git ls-remote --heads https://github.com/MotorolaMobilityLLC/kernel-msm.git | grep -iE 'MMI-.*(T|13)' | awk -F'/' '{print $3}' | head -n 1)
+          
+          if [ -z "$BRANCH" ]; then
+            echo "Fallback: Using 'master' as no 'T' branch was found."
+            BRANCH="master"
+          fi
+          
+          echo "Selected Branch: $BRANCH"
+          git clone --depth 1 --branch "$BRANCH" https://github.com/MotorolaMobilityLLC/kernel-msm.git source
 
       - name: Apply Surgical Fixes
         run: |
           cd source
-          echo "Searching for qmi.c to apply fixes..."
+          echo "Applying qmi.c fixes..."
           find . -name "qmi.c" -exec sed -i 's/static int get_moto_device()/static int get_moto_device(void)/g' {} +
           find . -name "qmi.c" -exec sed -i 's/static int get_moto_radio()/static int get_moto_radio(void)/g' {} +
 
       - name: Compile
         run: |
           cd source
-          
-          # Find the boston config
           REAL_CONFIG=$(find arch/arm64/configs/ -name "*boston*_defconfig" -printf "%f\n" | head -n 1)
           
           if [ -z "$REAL_CONFIG" ]; then
-             echo "ERROR: Boston config not found. Checking directory structure..."
-             ls -R arch/arm64/configs/ | head -n 20
+             echo "ERROR: Boston config not found."
+             ls arch/arm64/configs/ | head -n 10
              exit 1
           fi
 
