--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,9 @@
-name: Build
+cat << 'EOF' > .github/workflows/build.yml
+name: Kernel Build
 on:
-  push:
   workflow_dispatch:
+  push:
+    branches: [ main ]
 
 jobs:
   build:
@@ -9,37 +11,42 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+          fetch-depth: 1
 
       - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y bc bison build-essential flex git libssl-dev libelf-dev python3 pahole crossbuild-essential-arm64
+          sudo apt-get install -y bc build-essential python3 python-is-python3 \
+          gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libelf-dev \
+          bison flex libssl-dev qtbase5-dev wget pahole
 
       - name: Fetch Toolchain
         run: |
           mkdir -p clang
-          curl -LSs https://github.com/Zyin87/Clang/raw/main/clang-r487747c.tar.gz -o clang.tar.gz
+          wget -q --show-progress https://github.com/Zyin87/Clang/raw/main/clang-r487747c.tar.gz -O clang.tar.gz
+          if ! file clang.tar.gz | grep -q "gzip compressed data"; then
+            echo "ERROR: Downloaded file is not a valid gzip. Check the URL or LFS settings."
+            exit 1
+          fi
           tar -xzf clang.tar.gz -C clang
+          rm clang.tar.gz
 
-      - name: Fetch Brain
+      - name: Build Kernel
         run: |
-          mkdir -p msm-kernel
-          curl -LSs https://github.com/MotorolaMobilityLLC/msm-kernel/archive/refs/heads/android-14-release-u2ub34.44-30-6r1.tar.gz | tar -xz -C msm-kernel --strip-components=1
-
-      - name: Fetch Nerves
-        run: |
-          mkdir -p motorola-kernel-modules
-          curl -LSs https://github.com/MotorolaMobilityLLC/motorola-kernel-modules/archive/refs/heads/android-14-release-u2ub34.44-30-6r1.tar.gz | tar -xz -C motorola-kernel-modules --strip-components=1
-
-      - name: Build
-        run: |
-          export PATH=$GITHUB_WORKSPACE/clang/bin:$PATH
-          cd msm-kernel
-          make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- LLVM=1 LLVM_IAS=1 gki_defconfig
-          make -j$(nproc) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- LLVM=1 LLVM_IAS=1
-
-      - name: Upload
-        uses: actions/upload-artifact@v4
-        with:
-          name: Image
-          path: msm-kernel/arch/arm64/boot/Image
+          export PATH=$(pwd)/clang/bin:$PATH
+          export ARCH=arm64
+          export SUBARCH=arm64
+          export CROSS_COMPILE=aarch64-linux-gnu-
+          export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
+          export CLANG_TRIPLE=aarch64-linux-gnu-
+          
+          # Use Clang for the build
+          make O=out CC=clang ARCH=arm64 vendor/wayne_defconfig
+          make -j$(nproc --all) O=out \
+            CC=clang \
+            CLANG_TRIPLE=aarch64-linux-gnu- \
+            CROSS_COMPILE=aarch64-linux-gnu- \
+            CROSS_COMPILE_ARM32=arm-linux-gnueabi-
+EOF
